# delegator

./: .dockerignore  .gitignore  .replit  CNAME  Cargo.toml  Dockerfile  Makefile  README.md  darwin.nix  index.html  package-lock.json  replit.nix
.github/: release-drafter.yml
.github/workflows/: auto-build-test-push-deploy.yml  auto-build-test-push.yml  auto-lint-build-test.yml  auto-release-drafter.yml  auto-security-audit.yml  build-test-push-deploy.yml  cd.yml  ci.yml  deploy.yml  manual-build-test-push-deploy.yml  manual-build-test-push.yml  manual-deploy-to-env.yml  manual-security-audit.yml  mod-build-test-push-deploy.yml  mod-build-test-push.yml  mod-deploy-to-env.yml  mod-lint-build-test.yml  mod-security-audit.yml  release-drafter.yml  security-audit.yml  static.yml
config/: _template.conf  application.conf  development.conf  prod.conf  production.conf  stag.conf  staging.conf  thunderdome.conf
src/: main.rs
src/core/: config.rs  core.rs
src/core/cache/: mod.rs
src/core/client/: mod.rs
src/core/config/: events.rs  http_method.rs  mod.rs  path_and_query.rs  scheme.rs  stringy_duration.rs
src/core/evaluator/: mod.rs
src/core/events/: mod.rs
src/core/headers/: authorization.rs  features.rs  mod.rs
src/core/model/: cryptogram.rs  mod.rs
src/core/provisioner/: mod.rs
src/core/registry/: mod.rs
src/core/routes/: catalog.rs  closet.rs  errors.rs  evaluate.rs  healthcheck.rs  mod.rs  pricing.rs
src/core/translate/: deserialize.rs  mod.rs  parse.rs
terraform/: terragrunt.hcl
terraform/deploy/ecr/: terragrunt.hcl
terraform/deploy/environments/: terragrunt-environment.hcl  terragrunt-service.hcl
terraform/deploy/environments/thunderdome/us-east-1/: terragrunt.hcl
terraform/deploy/environments/thunderdome/us-east-1/service/: terragrunt.hcl
terraform/modules/envconfig/: ecs_container_def.json.tpl  main.tf  outputs.tf  variables.tf
