[package]
name = "delegator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "delegator"
path = "src/main.rs"

[lib]
name = "delegator_core"
path = "src/core/core.rs"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
async-trait = "0.1.67"
awc = { version = "3.1.1", features = ["openssl"] }
aws-config = "0.55.3"
aws-sdk-sqs = "0.28.0"
base64 = "0.21.2"
derive_more = "0.99.17"
env_logger = "0.10.0"
hashbrown = { version = "0.14.0", features = ["serde"] }
hmac = "0.12.1"
hocon = "0.9.0"
http-serde = "1.1.2"
iso8601 = { version = "0.6.1", features = ["serde"] }
log = { version = "0.4.19", features = ["std", "serde"] }
mime = "0.3.17"
nom = { version = "7.1.3", features = [ "alloc" ] }
once_cell = "1.18.0"
percent-encoding = "2.3.0"
sentry = { version = "0.31.8", features = ["default"] }
sentry-actix = "0.31.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.7"
tokio = "1.28.2"
uuid = { version = "1.3.4", features = ["v4"] }
