[package]
name = "delegator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "delegator"
path = "src/main.rs"

[lib]
name = "delegator_core"
path = "src/core/core.rs"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
async-trait = "0.1.79"
awc = { version = "3.4.0", features = ["openssl"] }
base64 = "0.21.2"
derive_more = "0.99.17"
hashbrown = { version = "0.14.0", features = ["serde"] }
hmac = "0.12.1"
http-serde = "1.1.3"
iso8601 = { version = "0.6.1", features = ["serde"] }
log = { version = "0.4.19", features = ["std", "serde"] }
mime = "0.3.17"
nom = { version = "7.1.3", features = [ "alloc" ] }
once_cell = "1.18.0"
percent-encoding = "2.3.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.7"
tokio = "1.36.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
toml = "0.8.11"
wson = { git = "https://github.com/blast-hardcheese/wson", branch = "expose-json-function" }
json-adapter = { git = "https://github.com/blast-hardcheese/json-adapter", version = "0.1.0" }
